--- a/frontend/signup.html
+++ b/frontend/signup.html
@@ -2,56 +2,186 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Signup</title>
-  <link rel="stylesheet" href="style.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Signup - Sri Durga Devi Borewells</title>
+  <style>
+    /* General body styling */
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      min-height: 100vh;
+      background: url('https://images.unsplash.com/photo-1549487561-2679c381d69d?ixlib=rb-4.0.3&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=1920&h=1080&fit=crop&ixid=M3wzNDg5MzR8MHwxfHNlYXJjaHwxfHxib3Jld2VsbHxlbnwwfHx8fDE2OTU3NjgwMzR8MA') center/cover no-repeat;
+      color: #fff;
+      position: relative;
+      overflow: hidden;
+    }
+    body::before {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(0, 0, 0, 0.4);
+    }
+    .glass-container {
+      position: relative;
+      z-index: 10;
+      background: rgba(255, 255, 255, 0.15);
+      backdrop-filter: blur(10px);
+      -webkit-backdrop-filter: blur(10px);
+      border: 1px solid rgba(255, 255, 255, 0.3);
+      border-radius: 20px;
+      padding: 40px 50px;
+      box-shadow: 0 8px 32px rgba(0, 0, 0, 0.3);
+      text-align: center;
+      width: 90%;
+      max-width: 400px;
+    }
+    h2 {
+      font-size: 2.2em;
+      margin-bottom: 20px;
+      font-weight: 600;
+    }
+    input, select {
+      width: calc(100% - 24px);
+      padding: 12px;
+      margin-bottom: 20px;
+      background: rgba(255, 255, 255, 0.2);
+      border: 1px solid rgba(255, 255, 255, 0.4);
+      border-radius: 10px;
+      color: #fff;
+      font-size: 1em;
+      outline: none;
+      transition: 0.3s;
+    }
+    select {
+      appearance: none;
+      cursor: pointer;
+    }
+    select option {
+      background: rgba(0, 0, 0, 0.85);
+      color: #fff;
+    }
+    ::placeholder { color: rgba(255, 255, 255, 0.8); }
+    input:focus, select:focus {
+      background: rgba(255, 255, 255, 0.3);
+      border-color: #fff;
+    }
+    button[type="submit"] {
+      width: 100%;
+      padding: 15px;
+      background: #27ae60;
+      border: none;
+      border-radius: 10px;
+      color: white;
+      font-size: 1.1em;
+      font-weight: bold;
+      cursor: pointer;
+      transition: 0.3s;
+    }
+    button[type="submit"]:hover {
+      background: #2ecc71;
+      transform: translateY(-2px);
+    }
+    a {
+      color: #f1c40f;
+      font-weight: bold;
+      text-decoration: none;
+    }
+    a:hover { color: #f39c12; }
+    /* Hide element class */
+    .hidden { display: none; }
+  </style>
 </head>
 <body>
-  <h2>Signup</h2>
-  <form id="signupForm">
-    <select id="role">
-      <option value="customer">Customer</option>
-      <option value="admin">Admin</option>
-    </select><br>
-    <input type="text" id="name" placeholder="Name" required><br>
-    <input type="text" id="phone" placeholder="Phone Number" required><br>
-    <input type="password" id="password" placeholder="Password" required><br>
-    <input type="password" id="confirmPassword" placeholder="Confirm Password" required><br>
-    <button type="submit">Signup</button>
-  </form>
+
+  <div class="glass-container">
+    <h2>Signup</h2>
+    <form id="signupForm">
+      <select id="role" required>
+        <option value="customer">Customer</option>
+        <option value="admin">Admin</option>
+      </select><br>
+      <input type="text" id="name" placeholder="Name" required><br>
+      <input type="tel" id="phone" placeholder="Phone Number" pattern="[0-9]{10}" required><br>
+      <input type="password" id="password" placeholder="Password" minlength="6" required><br>
+      <input type="password" id="confirmPassword" placeholder="Confirm Password" minlength="6" required><br>
+      <!-- Admin Secret Key (hidden by default) -->
+      <div id="adminKeySection" class="hidden">
+        <input type="password" id="secretKey" placeholder="Admin Secret Key">
+      </div>
+      <button type="submit">Signup</button>
+    </form>
+    <p>Already have an account? <a href="login.html">Login</a></p>
+  </div>
 
   <script>
+    const roleSelect = document.getElementById("role");
+    const adminKeySection = document.getElementById("adminKeySection");
+    const secretKeyInput = document.getElementById("secretKey");
+
+    // Toggle admin key field
+    roleSelect.addEventListener("change", (e) => {
+      if (e.target.value === "admin") {
+        adminKeySection.classList.remove("hidden");
+        secretKeyInput.required = true;
+      } else {
+        adminKeySection.classList.add("hidden");
+        secretKeyInput.required = false;
+      }
+    });
+
+    // Signup form submit
     document.getElementById("signupForm").addEventListener("submit", async (e) => {
       e.preventDefault();
-      const role = document.getElementById("role").value;
-      const name = document.getElementById("name").value;
-      const phone = document.getElementById("phone").value;
+
+      const role = roleSelect.value;
+      const name = document.getElementById("name").value.trim();
+      const phone = document.getElementById("phone").value.trim();
       const password = document.getElementById("password").value;
       const confirmPassword = document.getElementById("confirmPassword").value;
+      const secretKey = secretKeyInput.value.trim();
 
       if (password !== confirmPassword) {
-        alert("Passwords do not match!");
+        alert("❌ Passwords do not match!");
         return;
       }
 
-      const url = role === "admin" 
+      const url = role === "admin"
         ? "http://localhost:5000/api/admin/signup"
         : "http://localhost:5000/api/customer/signup";
+
+      const bodyData = role === "admin"
+        ? { name, phone, password, secretKey }
+        : { name, phone, password };
 
       try {
         const res = await fetch(url, {
           method: "POST",
           headers: { "Content-Type": "application/json" },
-          body: JSON.stringify({ name, phone, password })
+          body: JSON.stringify(bodyData)
         });
 
-        const data = await res.json();
+        let data;
+        try {
+          data = await res.json();
+        } catch {
+          data = { message: "Unexpected server response" };
+        }
+
         if (res.ok) {
           alert("✅ Signup successful! Please login.");
           window.location.href = "login.html";
         } else {
-          alert(data.message);
+          alert("⚠️ " + (data.message || "Signup failed."));
         }
       } catch (err) {
+        console.error("Error:", err);
         alert("⚠️ Error during signup. Please try again.");
       }
     });
